# unitLength

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml
include/: length.h  lengthUnitsEnums.h  lengthUnitsMacro.h  lengthUtils.h
src/: length.cpp  lengthUtils.cpp  main.cpp
tests/: CMakeLists.txt  convertToMetersTest.cpp  lengthClassTest.cpp  suffixTransformTest.cpp
